# chatllm

./: .gitignore  .pre-commit-config.yaml  README.md  cli.py  clustering.py  grapp.py  main.py  pyproject.toml
chatllm/: chat_message.py  constants.py  llm_controller.py  llm_history.py  llm_params.py  llm_response.py  llm_session.py  prompt.py  utils.py
chatllm/data/: local.json  models.json
chatllm/llms/: __init__.py  base.py  hf_pipeline.py  hugging_face.py  llama_cpp.py  llm_history.py  llm_params.py  open_ai.py  palm2.py  replicate.py  vertexai.py
chatllm/loaders/: __init__.py  base.py  document.py  fitz_pdf_loader.py  smart_pdf_loader.py
chatllm/prompts/: __init__.py  chat_message.py  default_prompts.py  prompt_formatter.py  prompt_value.py
scripts/: hf_check.py  hf_test.py
tests/: conftest.py  test_llm.py
